[package]
name = "orgtools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orgtools"
path = "src/main.rs"

[lib]
name = "orgtools"
path = "src/lib.rs"

[dependencies]
walkdir = "2.5.0"
tree-sitter-org = { git = "https://github.com/nvim-orgmode/tree-sitter-org.git" }
tree-sitter = "0.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
clap = "4.5.16"
anyhow = "1.0.88"
chrono = "0.4.38"
